@startuml

title __TINYMACHINESE4's Class Diagram__\n

  namespace entities {
    abstract class entities.Entity {
    }
  }
  

  namespace entities {
    class entities.Marble {
    }
  }
  

  namespace entities {
    class entities.Point {
    }
  }
  

  namespace entities {
    class entities.Rectangle {
    }
  }
  

  namespace entities {
    class entities.SimpleTrack {
    }
  }
  

  namespace entities {
    class entities.Sphere {
    }
  }
  

  namespace entities {
    class entities.Track {
    }
  }
  

  namespace main {
    class MainApplication {
    }
  }
  

  namespace main {
    class main.Simulation {
    }
  }
  

  namespace misc {
    class misc.Polynomial3d {
    }
  }
  

  namespace misc {
    class misc.Utils {
    }
  }
  

  namespace misc {
    class misc.Vec3d {
    }
  }
  

  entities.Entity o-- misc.Vec3d : accel
  entities.Entity o-- misc.Vec3d : pos
  entities.Entity o-- misc.Vec3d : velo
  entities.Marble -up-|> entities.Sphere
  entities.Point -up-|> entities.Entity
  entities.Rectangle -up-|> entities.Entity
  entities.Rectangle o-- misc.Vec3d : dimensions
  entities.Rectangle o-- misc.Vec3d : normal
  entities.SimpleTrack -up-|> entities.Track
  entities.Sphere -up-|> entities.Entity
  entities.Track o-- misc.Polynomial3d : trackFunc
  MainApplication -up-|> javafx.application.Application
  misc.Polynomial3d o-- misc.Polynomial3d : derived


right footer


endfooter

@enduml
